--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Magic Eight Ball</string>
+    <string name="MEDE"><b>Make everyday decisions easier!</b></string>
 </resources>
